[gd_scene load_steps=4 format=3 uid="uid://dxa06w1jgqan1"]

[ext_resource type="Script" path="res://assets/background/orbit.gd" id="1_wwacg"]
[ext_resource type="Texture2D" uid="uid://bt24eljfwasxc" path="res://assets/UI/witchCircle2.png" id="2_4dve2"]
[ext_resource type="Texture2D" uid="uid://iuerj03bgclw" path="res://assets/placeholders/circle-512.png" id="3_l6ccr"]

[node name="Orbit" type="Node2D"]
position = Vector2(484, 350)
script = ExtResource("1_wwacg")
circleSpeed = 1.0

[node name="CircleAxis" type="Node2D" parent="."]

[node name="Circle" type="Sprite2D" parent="CircleAxis"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_4dve2")

[node name="OrbitalAxis" type="Node2D" parent="."]

[node name="OrbitalObject" type="Sprite2D" parent="OrbitalAxis"]
self_modulate = Color(0.909804, 0.835294, 0.709804, 1)
position = Vector2(256, 0)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_l6ccr")

[node name="Spinner" type="AnimationPlayer" parent="."]
